# Camera_Calibration

./: CMakeLists.txt  LICENSE  README.md
Calibration/: CMakeLists.txt  calibration.cpp  calibration.h  calibration_method.cpp  main.cpp  matrix.h  matrix_algo.cpp  matrix_algo.h  script.txt  vector.h
easy3d/core/: CMakeLists.txt  kdtree.cpp  kdtree.h  mat.h  quat.h
easy3d/fileio/: CMakeLists.txt  point_cloud_io.cpp  point_cloud_io.h  resources.cpp  resources.h  surface_mesh_io.cpp  surface_mesh_io.h
easy3d/util/: CMakeLists.txt
easy3d/viewer/: CMakeLists.txt  camera.cpp  camera.h  drawable.cpp  drawable.h  drawable_lines.cpp  drawable_points.cpp  key_frame_interpolator.cpp  primitives.h  viewer.cpp
report/source/: main.tex
resources/data/: A1_6_points.noisy.txt  A1_9_points.noisy.exact.txt  A1_9_points.normal.txt  A1_data_1(6_points).normal.no.offset.txt  Result_test_data_1(6_points)-normal.png.camera  result_exact.png.camera  result_noisy.png.camera  test_data_3(11_points)-exact.txt
resources/data/results/: result_A1_6_exact.png.camera  result_A1_6_normal.png.camera  result_A1_9_exact.png.camera  result_A1_9_noisy.png.camera
resources/shaders/points/: points_plain_color.frag
resources/shaders/shadow/: soft_shadow_rendering.frag
resources/shaders/surface/: surface_color.frag  surface_texture.frag
